data/derived/comb/progs/unify/prog8587.ml.out
Characters 68-72:
  n mod 10 :: numL
              ^^^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
